libs/pavex_cli/tests/ui_tests/runtime_singletons_must_be_clonable/expectations/stderr.txt
Error: 
  × `app::NonCloneSingleton` does not implement the `core::clone::Clone`
  │ trait.
    ╭─[src/lib.rs:12:1]
 12 │     let mut bp = AppBlueprint::new();
 13 │     bp.constructor(f!(crate::NonCloneSingleton::new), Lifecycle::Singleton);
    ·                    ────────────────┬────────────────
    ·                                    ╰── The constructor was registered here
 14 │     bp
    ╰────
  help: All singletons must implement the `Send`, `Sync` and `Clone` traits.
         `pavex` runs on a multi-threaded HTTP server and singletons must be
        shared across all worker threads.